mejora de dto y entity crear controlador de proveedores, servicios y repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=inventory
+server.port=8080
+server.contextPath=/
+
+springdoc.swagger-ui.enabled=true
+springdoc.packages-to-scan=spring.app.inventory.controller
+
+logging.level.com.globant.challenge=DEBUG
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/inventory
+spring.datasource.username=postgres
+spring.datasource.password=omar123
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
